@@ -1,1 +1,3 @@
 <h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading2&amp;section=1">Edit</a>]</span><span id="heading"><b>heading</b></span></h2>
+<h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading2&amp;section=2">Edit</a>]</span><span id="a_.23if">#if</span></h2>
+<h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading2&amp;section=3">Edit</a>]</span><span id="a_.23if_1">#if</span></h2>
