@@ -31,10 +31,14 @@ New Features:
 
 Bugfixes:
 
+  * Heading text that started with list tags (example: "#if") were improperly
+    being parsed as lists.
   * Spring security 3.0 change how logout redirection is handled.  Update
     JAMWiki to redirect logout properly.  Note that this change modifies
     the applicationContext-security.xml file.  Reported by Leonardo Silva Kury
     Aragão Mendes.
+  * Remove the "plainlinks" pattern from the spam blacklist since that CSS
+    class is commonly used on Mediawiki sites.
 
 Translation Updates:
 
